【V1】调整 Github 的 pylint 规则

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint --max-line-length=120 metasequoia_sql
+        pylint --max-line-length=120 metasequoia_sql metasequoia_sql_grammar
